[gd_scene load_steps=2 format=2]

[ext_resource path="res://RaptorRender/GUI/InfoPanels/JobInfoPanel/ImagePreview/ImagePreviewPanel.gd" type="Script" id=1]

[node name="ImagePreviewPanel" type="VSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 60
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_right = 1280.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ThumbnailSettingsBar" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 30.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/ThumbnailSettingsBar"]
visible = false
margin_right = 1280.0
margin_bottom = 30.0
color = Color( 0.192157, 0.192157, 0.192157, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ThumbnailSettingsBar"]
margin_right = 1280.0
margin_bottom = 30.0
custom_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ThumbnailSettingsBar/HBoxContainer"]
editor/display_folded = true
margin_right = 62.0
margin_bottom = 30.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="RefreshButton" type="Button" parent="VBoxContainer/ThumbnailSettingsBar/HBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 57.0
margin_bottom = 25.0
text = "reload"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ThumbnailSettingsBar/HBoxContainer"]
margin_left = 72.0
margin_top = 5.0
margin_right = 76.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 4

[node name="SizeLabel" type="Label" parent="VBoxContainer/ThumbnailSettingsBar/HBoxContainer"]
margin_left = 86.0
margin_top = 8.0
margin_right = 116.0
margin_bottom = 22.0
text = "Size:"

[node name="ThumbnailWidthSlider" type="HSlider" parent="VBoxContainer/ThumbnailSettingsBar/HBoxContainer"]
margin_left = 126.0
margin_top = 5.0
margin_right = 276.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 20 )
size_flags_horizontal = 5
size_flags_vertical = 4
min_value = 0.25
max_value = 1.5
step = 0.01
value = 0.75

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/ThumbnailSettingsBar/HBoxContainer"]
margin_left = 286.0
margin_top = 5.0
margin_right = 290.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 4

[node name="FramenumberVisibilityCheckBox" type="CheckBox" parent="VBoxContainer/ThumbnailSettingsBar/HBoxContainer"]
margin_left = 300.0
margin_right = 426.0
margin_bottom = 30.0
pressed = true
text = "frame numbers"

[node name="ThumbnailsScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 1280.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ThumbnailDirectoriesVBox" type="VBoxContainer" parent="VBoxContainer/ThumbnailsScrollContainer"]
margin_right = 1280.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="EnlargedPreviewContainer" type="MarginContainer" parent="."]
margin_top = 366.0
margin_right = 500.0
margin_bottom = 600.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="EnlargedPreviewContainer"]
margin_right = 500.0
margin_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="EnlargedPreviewContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="PreviewImage" type="TextureRect" parent="EnlargedPreviewContainer/Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
[connection signal="pressed" from="VBoxContainer/ThumbnailSettingsBar/HBoxContainer/MarginContainer/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/ThumbnailSettingsBar/HBoxContainer/ThumbnailWidthSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="VBoxContainer/ThumbnailSettingsBar/HBoxContainer/FramenumberVisibilityCheckBox" to="." method="_on_CheckBox_toggled"]
